--- a/Lab1/about.html
+++ b/Lab1/about.html
@@ -1,95 +1,26 @@
-<!DOCTYPE html>
+
+
+    <!DOCTYPE html>
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV - Sinh viên</title>
-    <link rel="stylesheet" href="style.css" />
-    <!-- <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-        color: #333;
-      }
-      .container {
-        width: 80%;
-        margin: 0 auto;
-        padding: 20px;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-      h1,
-      h2,
-      h3 {
-        color: #444;
-      }
-      .header {
-        text-align: center;
-        padding-bottom: 20px;
-      }
-      .section {
-        margin-bottom: 20px;
-      }
-      .section h2 {
-        border-bottom: 2px solid #444;
-        padding-bottom: 5px;
-        margin-bottom: 10px;
-      }
-      .section p,
-      .section ul {
-        margin: 10px 0;
-      }
-      ul {
-        list-style-type: none;
-        padding: 0;
-      }
-      ul li {
-        margin-bottom: 10px;
-      }
-      .bold {
-        font-weight: bold;
-      }
-      .tab {
-        display: flex;
-        background-color: #f1f1f1;
-        padding: 10px;
-        margin-bottom: 20px;
-      }
-      .tab a {
-        background-color: inherit;
-        text-decoration: none;
-        padding: 10px 15px;
-        font-size: 17px;
-        color: black;
-        border: 1px solid transparent;
-      }
-      .tab a:hover {
-        background-color: #ddd;
-      }
-      .tab a.active {
-        background-color: #ccc;
-        border-bottom: 2px solid #444;
-      }
-    </style> -->
+    <title>About Me</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Tab navigation -->
-    <div class="tab">
-      <a href="index.html">Home</a>
-      <a href="about.html" class="active">About</a>
-      <a href="lab.html">Labs</a>
-    </div>
-
     <div class="container">
-      <div class="header">
-        <h1>Trần Lê Phúc An</h1>
-        <p>Sinh viên Nông Lâm, năm 2</p>
+      <div class="menu">
+        <a href="index.html" class="home-link">Home</a>
+        <a href="about.html" class="about-link">About</a>
+        <a href="lab.html" class="labs-link">Tabs</a>
       </div>
-
-      <!-- CV Content -->
-      <div class="section">
+      <div class="content">
+        <h2>About Me</h2>
+        <p><strong>Họ tên:</strong> Trần Lê Phúc An</p>
+        <p><strong>Ngày sinh:</strong> 10/05/2005</p>
+        
+          <li>Đại học Nông Lâm khoa Công nghệ Thông tin k49</li>
         <h2>Giới thiệu</h2>
         <p>
           Tôi là sinh viên năm 2 ngành Công nghệ Thông tin tại Trường Đại học
