--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Website</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Tab navigation -->
-    <div class="tab">
-      <a href="index.html" class="active">Home</a>
-      <a href="about.html">About</a>
-      <a href="lab.html">Labs</a>
-    </div>
-    <h1>Welcome</h1>
-
-    <!-- Content for the Home page -->
-    <div>
-      <h2>Home</h2>
-      <p>Welcome to the home page</p>
+    <div id="tab" class="content active home-content">
+      <div class="menu">
+        <a href="index.html" class="home-link">Home</a>
+        <a href="about.html" class="about-link">About</a>
+        <a href="lab.html" class="labs-link">Tabs</a>
+      </div>
+      <div class="home-content">
+        <h2>Welcome to Home</h2>
+        <p>Chào mừng bạn đến với trang chính.</p>
+      </div>
     </div>
   </body>
 </html>
