--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="home-content">
         <h2>Welcome to Home</h2>
         <p>Chào mừng bạn đến với trang chính.</p>
-        <p>tên đăng nhập là: student password: 123456.</p>
+        <p>tên đăng nhập là: student </p>
       </div>
     </div>
   </body>
