--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <div class="home-content">
         <h2>Welcome to Home</h2>
         <p>Chào mừng bạn đến với trang chính.</p>
-        <p>tên đăng nhập là: student </p>
+        <p>tên đăng nhập là: student 
+        password 123456</p>
       </div>
     </div>
   </body>
