--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
               <li>Đại học Nông Lâm khoa Công nghệ Thông tin k49</li>
               <p>GIỚI THIỆU CHUNG VỀ KHOA CÔNG NGHỆ THÔNG TIN:
               </p>
-              <img src="..//phancss/khoa.png">
+              <img src="khoa.png">
               <p> page của khoa:</p>
               <p>
 
