--- a/lab1.html
+++ b/lab1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quản lý khóa học-Lab1</title>
-    <link rel="stylesheet" href="..//phancss/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="lab1.css" />
   </head>
   <body>
