--- a/lab2.html
+++ b/lab2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login-Bài tập lab2</title>
-    <link rel="stylesheet" href="..//phancss/styles.css">
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="styles.css">
+    
   </head>
   <body>
     <div class="container">
