--- a/lab3.html
+++ b/lab3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chia sẻ tài liệu học tập-lab3</title>
-    <link rel="stylesheet" href="..//phancss/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="container">
@@ -20,7 +20,7 @@
             <a href="Lab2.html">Lab2</a>
             <a href="Lab3.html">Lab3</a>
           </div>
-          <script src="..//phanjavascript/lab3.js"></script>
+          <script src="lab3.js"></script>
           <h1>Chia Sẻ Tài Liệu Học Tập</h1>
       
           <div class="subjects-container">
