--- a/lab1.html
+++ b/lab1.html
@@ -106,6 +106,6 @@
       </div>
     </div>
 
-    <script src="..//phanjavascript/lab1.js"></script>
+    <script src="lab1.js"></script>
   </body>
 </html>
