--- a/lab2.html
+++ b/lab2.html
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <script src="..//phanjavascript/lab2.js"></script>
+      <script src="lab2.js"></script>
     </div>
   </body>
 </html>
