--- a/lab3.html
+++ b/lab3.html
@@ -17,9 +17,9 @@
         <div class="content">
           <h2>Tabs</h2>
           <div class="labs-container">
-            <a href="Lab1.html">Lab1</a>
-            <a href="Lab2.html">Lab2</a>
-            <a href="Lab3.html">Lab3</a>
+            <a href="lab1.html">Lab1</a>
+            <a href="lab2.html">Lab2</a>
+            <a href="lab3.html">Lab3</a>
           </div>
           <script src="lab3.js"></script>
           <h1>Chia Sẻ Tài Liệu Học Tập</h1>
