--- a/index.html
+++ b/index.html
@@ -3,272 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MuleSoft Course Interface</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
-      <!-- Header Section -->
-      <div class="header">
-        <a href="#" class="home">Home</a>
-        <div class="title">Course Title</div>
-        <div class="leave-rating">Leave a Rating</div>
-        <div class="yours-proies">Yours Proies</div>
-        <button>Share</button>
-        <button class="dots">...</button>
+    <div id="tab" class="content active home-content">
+      <div class="menu">
+        <a href="index.html" class="home-link">Home</a>
+        <a href="about.html" class="about-link">About</a>
+        <a href="lab.html" class="labs-link">Tabs</a>
       </div>
-
-      <!-- Layout: Video and Playlist -->
-      <div class="split-section">
-        <!-- Video Player -->
-        <div class="left-column">
-          <div class="video-section">
-            <iframe
-              id="currentVideo"
-              src="https://www.youtube.com/embed/VCzjgQhORYk?si=OMZXhCZRwsnjmR9g"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </div>
-
-        <!-- Video Playlist -->
-        <div class="right-column">
-          <div class="video-list">
-            <h3>Danh sách bài học HTML</h3>
-            <ul>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/VCzjgQhORYk?si=OMZXhCZRwsnjmR9g', 'Thiết kế web 01 - Giới thiệu về Internet và Website')"
-                  >Thiết kế web 01 - Giới thiệu về Internet và Website</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/76X5f0pWDn0?si=9ELJmCyGSSyMIBQP', 'Thiết kế web 02 - Hướng dẫn Cài đặt Visual Studio Code')"
-                  >Thiết kế web 02 - Hướng dẫn Cài đặt Visual Studio Code</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/dfRrepUXx-Q?si=x1Rp8bdEutiv288d', 'Thiết kế web 03 - Giới thiệu về HTML | HyperText Transfer Protocol')"
-                  >Thiết kế web 03 - Giới thiệu về HTML | HyperText Transfer
-                  Protocol</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/uGGmb6FfXOM?si=OHxGhL_Xr6eWEGIa', 'Thiết kế web 04 - Cấu trúc HTML của trang web và một số thẻ HTML cơ bản')"
-                  >Thiết kế web 04 - Cấu trúc HTML của trang web và một số thẻ
-                  HTML cơ bản</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/ghJOygE7gaA?si=Q7nxzhXscIKCaAaZ', 'Thiết kế web 05 - Cài đặt HTML Preview để xem nhanh kết quả HTML trong VS CODE')"
-                  >Thiết kế web 05 - Cài đặt HTML Preview để xem nhanh kết quả
-                  HTML trong VS CODE</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/p-JFKLw66Ro?si=EPZ9_ho5B26DT0bG', 'Thiết kế web 06 - Giới thiệu các thẻ về text trong HTML')"
-                  >Thiết kế web 06 - Giới thiệu các thẻ về text trong HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/8P5EGuLegyM?si=hdCSOvY-mzlfRILD', 'Thiết kế web 7 - Thực hành các thẻ về text trong HTML')"
-                  >Thiết kế web 7 - Thực hành các thẻ về text trong HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/_rEgswZYcjE?si=xEH14P0eNHpK9-13', 'Thiết kế web 8 - Thực hành các thẻ về text trong HTML phần 2')"
-                  >Thiết kế web 8 - Thực hành các thẻ về text trong HTML phần
-                  2</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/z-rEomoK4Is?si=FuR-6eK6zhYrQYhX', 'Thiết kế web 9 - Giới thiệu các thẻ danh sách trong HTML')"
-                  >Thiết kế web 9 - Giới thiệu các thẻ danh sách trong HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/pKBneW2Stv0?si=ds5-plWKds4JfC7g', 'Thiết kế web 10 - Thực hành các thẻ về danh sách trong HTML')"
-                  >Thiết kế web 10 - Thực hành các thẻ về danh sách trong
-                  HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/3DA51lpDYs8?si=T_ykwQAEkTtGGkD3', 'Thiết kế web 11 - Thực hành các thẻ về danh sách trong HTML phần 2')"
-                  >Thiết kế web 11 - Thực hành các thẻ về danh sách trong HTML
-                  phần 2</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/79EdpDZURlM?si=oN856wlfuFEUC_ev', 'Thiết kế web 12 - Giới thiệu về link và thẻ a trong HTML')"
-                  >Thiết kế web 12 - Giới thiệu về link và thẻ a trong HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/gEh6yIbtsR0?si=ey0pPlLeX2qqkTeN', 'Thiết kế web 13 - Thực hành về link và thẻ a trong HTML')"
-                  >Thiết kế web 13 - Thực hành về link và thẻ a trong HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/pfsv0BN9XwU?si=x_F_LC1SzD0k6K2Z', 'Thiết kế web 14 - Thực hành về link và thẻ a trong HTML - Phần 2')"
-                  >Thiết kế web 14 - Thực hành về link và thẻ a trong HTML -
-                  Phần 2</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/UkbHTnTDAOc?si=Vpa0XIksvekU5IRk', 'Thiết kế web 15 - Giới thiệu về hình ảnh và thẻ img trong HTML')"
-                  >Thiết kế web 18 - Giới thiệu về hình ảnh và thẻ img trong
-                  HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/8yBbvFm3xrU?si=AfCk6-SWqIhMIjzM', 'Thiết kế web 16 - Thực hành về hình ảnh và thẻ img trong HTML')"
-                  >Thiết kế web 19 - Thực hành về hình ảnh và thẻ img trong
-                  HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/rOaa4-7LesI?si=dZP52MBngZBDfrQf', 'Thiết kế web 17- Quy tắc sử dụng hình ảnh trong thiết kế website')"
-                  >Thiết kế web 17 - Quy tắc sử dụng hình ảnh trong thiết kế
-                  website</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/ZvGNe9LaYk0?si=O-E_kG9wtyWFgGAr', 'Thiết kế web 18 - Lazy loading cho hình ảnh trong thiết kế web')"
-                  >Thiết kế web 18 - Lazy loading cho hình ảnh trong thiết kế
-                  web</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/2AdF9e-m6fQ?si=Un9AU96OmzV5v8oi', 'Thiết kế web 19 - Giới thiệu TABLE trong HTML')"
-                  >Thiết kế web 19 - Giới thiệu TABLE trong HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/11HjvqlQ5uE?si=V5ZxnK9tOobS6-cU', 'Thiết kế web 20 - Bài tập TABLE trong HTML')"
-                  >Thiết kế web 20 - Bài tập TABLE trong HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/EXFUjLiZfLU?si=mFZpSZP1vcc9R-eH', 'Thiết kế web 21 - Giới thiệu về FORM trong HTML')"
-                  >Thiết kế web 21 - Giới thiệu về FORM trong HTML</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/FPl6rGWULYE?si=YniDmsccA3Cd07YD', 'Thiết kế web 22 - Bài tập tạo FORM trong HTML phần 1')"
-                  >Thiết kế web 22 - Bài tập tạo FORM trong HTML phần 1</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/B4FJnRTjCiA?si=WuMJ1S90LyaDunGv', 'Thiết kế web 23 - Bài tập tạo FORM trong HTML phần 2')"
-                  >Thiết kế web 23 - Bài tập tạo FORM trong HTML phần 2</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/F8uZmGNUwBk?si=aMlCO9rbpN8q_sLQ', 'Thiết kế web 24 - Kiểm tra biểu mẫu Form Validation sử dụng HTML5')"
-                  >Thiết kế web 24 - Kiểm tra biểu mẫu Form Validation sử dụng
-                  HTML5</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  onclick="loadVideo('https://www.youtube.com/embed/fGRzl5onHAk?si=jgl0-7O4L1PZMr8F', 'Thiết kế web 25 - Lưu ý về các form controls trong HTML')"
-                  >Thiết kế web 25 - Lưu ý về các form controls trong HTML</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <!-- Video Information Section -->
-      <div class="video-info">
-        <h2 id="videoTitle">Introduction to Integration</h2>
-        <div class="tabs">
-          <a href="#">Overview</a>
-          <a href="#">Q&A</a>
-          <a href="#">Notes</a>
-          <a href="#">Announcements</a>
-          <button>Reviews</button>
-          <button>Resources</button>
-        </div>
-
-        <div class="rating">
-          <span>⭐⭐⭐⭐</span>
-          <p>4.6 (4,705 ratings) | 26,379 students | Total: 60 hours</p>
-        </div>
-        <p class="updated">Last updated: November 2023</p>
-
-        <!-- Course Description -->
-        <div class="description">
-          <strong>What you'll learn:</strong>
-          <ul>
-            <li>
-              The process of making data transfer between multiple systems is
-              known as integration.
-            </li>
-            <li>
-              If we don’t want to transfer data between systems, then
-              integration is not required.
-            </li>
-            <li>Years ago, everyone used paper to persist or transfer data.</li>
-            <li>
-              IT has introduced web applications development, and now data is
-              stored in systems.
-            </li>
-          </ul>
-        </div>
+      <div class="home-content">
+        <h2>Welcome to Home</h2>
+        <p>
+          Chào mừng bạn đến với trang chính. -Home: chứa nội dung các thành phần
+          sẽ có trong web. -About: giới thiệu về sinh viên. -Tab: chứa các tab
+          có các chức năng khác nhau. + Tab1: phần đăng kí môn. + Tab2: phần
+          đăng nhập (Tên đăng nhập là: phucan password: 123456) và trả lời các
+          câu hỏi có hỗ trợ chấm điểm. + Tab3: phần các tài liệu chia sẻ các môn
+          học.
+        </p>
       </div>
     </div>
-
-    <script src="script.js"></script>
   </body>
 </html>
