--- a/labs.html
+++ b/labs.html
@@ -16,11 +16,11 @@
         <div class="content">
           <h2>Tabs</h2>
           <div class="labs-container">
-            <a href="Lab1.html">Lab1</a>
-            <a href="Lab2.html">Lab2</a>
-            <a href="Lab3.html">Lab3</a>
-            <a href="Lab4.html">Lab4</a>
-            <a href="Lab5.html">Lab5</a>
+            <a href="lab1.html">Lab1</a>
+            <a href="lab2.html">Lab2</a>
+            <a href="lab3.html">Lab3</a>
+            <a href="lab4.html">Lab4</a>
+            <a href="lab5.html">Lab5</a>
           </div>
   
   </body>
