--- a/lab1.html
+++ b/lab1.html
@@ -12,16 +12,16 @@
       <div class="menu">
         <a href="index.html" class="home-link">Home</a>
         <a href="about.html" class="about-link">About</a>
-        <a href="labs.html" class="labs-link">Tabs</a>
+        <a href="labs.html" class="labs-link">Lab</a>
       </div>
       <div class="content">
-        <h2>Tabs</h2>
+        <h2>Lab</h2>
         <div class="labs-container">
-          <a href="Lab1.html">Lab1</a>
-          <a href="Lab2.html">Lab2</a>
-          <a href="Lab3.html">Lab3</a>
-          <a href="Lab4.html">Lab4</a>
-          <a href="Lab5.html">Lab5</a>
+          <a href="lab1.html">Lab1</a>
+          <a href="lab2.html">Lab2</a>
+          <a href="lab3.html">Lab3</a>
+          <a href="lab4.html">Lab4</a>
+          <a href="lab5.html">Lab5</a>
         </div>
       <div class="content">
         <h2>Quản lý khóa học</h2>
