--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <div class="menu">
           <a href="index.html" class="home-link">Home</a>
           <a href="about.html" class="about-link">About</a>
-          <a href="lab.html" class="labs-link">Tabs</a>
+          <a href="lab.html" class="labs-link">Lab</a>
         </div>
         <div class="about-content">
             <h2>About Me</h2>
