--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="tab" class="content active home-content">
       <div class="menu">
-        <a href="index.html" class="home-link">Home</a>
+        <a href="index.html" class="home-link">Home </a>
         <a href="about.html" class="about-link">About</a>
-        <a href="lab.html" class="labs-link">Tabs</a>
+        <a href="lab.html" class="labs-link">Lab</a>
       </div>
       <div class="home-content">
         <h2>Welcome to Home</h2>
