--- a/lab.html
+++ b/lab.html
@@ -11,10 +11,10 @@
         <div class="menu">
           <a href="index.html" class="home-link">Home</a>
           <a href="about.html" class="about-link">About</a>
-          <a href="lab.html" class="labs-link">Tabs</a>
+          <a href="labs.html" class="labs-link">Lab</a>
         </div>
         <div class="content">
-          <h2>Tabs</h2>
+          <h2>Lab</h2>
           <div class="labs-container">
             <a href="lab1.html">Lab1</a>
             <a href="lab2.html">Lab2</a>
