--- a/lab1.html
+++ b/lab1.html
@@ -12,7 +12,7 @@
       <div class="menu">
         <a href="index.html" class="home-link">Home</a>
         <a href="about.html" class="about-link">About</a>
-        <a href="labs.html" class="labs-link">Lab</a>
+        <a href="lab.html" class="labs-link">Lab</a>
       </div>
       <div class="content">
         <h2>Lab</h2>
