--- a/themlab2.html
+++ b/themlab2.html
@@ -11,7 +11,7 @@
       <div class="menu">
         <a href="index.html" class="home-link">Home</a>
         <a href="about.html" class="about-link">About</a>
-        <a href="labs.html" class="labs-link">Tabs</a>
+        <a href="lab.html" class="labs-link">Tabs</a>
       </div>
       <section id="dashboardScreen">
         <h1>Các bài tập có sẵn</h1>
