Thông điệp mô tả thay đổi của bạn

--- a/index.html
+++ b/index.html
@@ -15,14 +15,7 @@
       </div>
       <div class="home-content">
         <h2>Welcome to Home</h2>
-        <p>
-          Chào mừng bạn đến với trang chính. -Home: chứa nội dung các thành phần
-          sẽ có trong web. -About: giới thiệu về sinh viên. -Tab: chứa các tab
-          có các chức năng khác nhau. + Tab1: phần đăng kí môn. + Tab2: phần
-          đăng nhập (Tên đăng nhập là: phucan password: 123456) và trả lời các
-          câu hỏi có hỗ trợ chấm điểm. + Tab3: phần các tài liệu chia sẻ các môn
-          học.
-        </p>
+        <p>Chào mừng bạn đến với trang chính.</p>
       </div>
     </div>
   </body>
