Mô tả thay đổi của bạn

--- a/lab3.html
+++ b/lab3.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chia sẻ tài liệu học tập-lab3</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="lab3.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/lab3.css">
   </head>
   <body>
     <div class="container">
@@ -25,7 +25,7 @@
             <a href="lab4.html">Lab4</a>
             <a href="lab5.html">Lab5</a>
           </div>
-          <script src="lab3.js"></script>
+          <script src="/script.js/lab3.js"></script>
           <h1>Chia Sẻ Tài Liệu Học Tập</h1>
       
           <div class="subjects-container">
