--- a/lab4.html
+++ b/lab4.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MuleSoft Course Interface</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="lab4.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/lab4.css" />
   </head>
   <body>
     <div class="container">
@@ -289,6 +289,6 @@
       </div>
     </div>
 
-    <script src="lab4.js"></script>
+    <script src="/script.js/lab4.js"></script>
   </body>
 </html>
