--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <div id="tab" class="content active home-content">
@@ -15,7 +15,7 @@
       </div>
       <div class="home-content">
         <h2>Welcome to Home</h2>
-        <p>Chào mừng bạn đến với trang chính.</p>
+        <p>Học HCL</p>
       </div>
     </div>
   </body>
