--- a/lab5.html
+++ b/lab5.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Learning</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="lab5.css" />
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/lab5.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -107,7 +107,7 @@
           <div class="certification-cards">
             <div class="certification-card">
               <img
-                src="Oracle_Associates_Badge.jpg"
+                src="image/Oracle_Associates_Badge.jpg"
                 alt="Oracle Logo"
                 width="80"
                 height="80"
@@ -119,7 +119,7 @@
             </div>
             <div class="certification-card">
               <img
-                src="Brightest_CTFL.jpg"
+                src="image/Brightest_CTFL.jpg"
                 alt="ISTQB Logo"
                 width="80"
                 height="80"
@@ -139,7 +139,7 @@
         <div class="course-list">
           <!-- Course 1 -->
           <div class="course-card">
-            <img src="csr.jpg" alt="CSR Course" />
+            <img src="image/csr.jpg" alt="CSR Course" />
             <div class="menu-icon">⋮</div>
             <div class="course-content">
               <h3>FPT_Corporate Social Responsibility Training 2024</h3>
@@ -156,7 +156,7 @@
 
           <!-- Course 2 -->
           <div class="course-card">
-            <img src="c2.jpg" alt="Another Course" />
+            <img src="/image/c2.jpg" alt="Another Course" />
             <div class="menu-icon">⋮</div>
             <div class="course-content">
               <h3>FPT_Leadership Development Program 2024</h3>
@@ -236,19 +236,7 @@
       </div>
     </div>
 
-    <script>
-      function showSection(sectionId) {
-        const sections = document.querySelectorAll(".section");
-        const tabs = document.querySelectorAll(".tabs div");
-
-        sections.forEach((section) => section.classList.remove("active"));
-        document.getElementById(sectionId).classList.add("active");
-
-        tabs.forEach((tab) => tab.classList.remove("active"));
-        document
-          .querySelector(`.tabs div[onclick="showSection('${sectionId}')"]`)
-          .classList.add("active");
-      }
+   <script src="/script.js/lab5.js"></script>
     </script>
   </body>
 </html>
