--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div>
@@ -20,7 +20,7 @@
               <li>Đại học Nông Lâm khoa Công nghệ Thông tin k49</li>
               <p>GIỚI THIỆU CHUNG VỀ KHOA CÔNG NGHỆ THÔNG TIN:
               </p>
-              <img src="/image/khoa.jpg " width="1000" height="800">
+              <img src="image/khoa.jpg " width="1000" height="800">
               <p> page của khoa:</p>
               <p>
               Tổng quan: 
