--- a/lab4.html
+++ b/lab4.html
@@ -289,6 +289,6 @@
       </div>
     </div>
 
-    <script src="/script.js/lab4.js"></script>
+    <script src="script.js/lab4.js"></script>
   </body>
 </html>
