--- a/lab1.html
+++ b/lab1.html
@@ -23,6 +23,7 @@
           <a href="lab3.html">Lab3</a>
           <a href="lab4.html">Lab4</a>
           <a href="lab5.html">Lab5</a>
+          <a href="rep56.html">Lab6</a>
       <div class="content">
         <h2>Quản lý khóa học</h2>
 
@@ -108,6 +109,6 @@
       </div>
     </div>
 
-    <script src="script.js/lab1.js"></script>
+    <script src="script/lab1.js"></script>
   </body>
 </html>
