--- a/lab2.html
+++ b/lab2.html
@@ -23,6 +23,7 @@
           <a href="lab3.html">Lab3</a>
           <a href="lab4.html">Lab4</a>
           <a href="lab5.html">Lab5</a>
+          <a href="rep56.html">Lab6</a>
         </div>
       <div id="wrapper">
         <form onsubmit="handleLogin(event)">
