--- a/lab3.html
+++ b/lab3.html
@@ -24,6 +24,7 @@
             <a href="lab3.html">Lab3</a>
             <a href="lab4.html">Lab4</a>
             <a href="lab5.html">Lab5</a>
+            <a href="rep56.html">Lab6</a>
           </div>
           <script src="script.js/lab3.js"></script>
           <h1>Chia Sẻ Tài Liệu Học Tập</h1>
@@ -124,6 +125,6 @@
           </div>
         </body>
       </html>
-      
+      <script src="script/lab3.js"></script>
   </body>
 </html>
