--- a/lab5.html
+++ b/lab5.html
@@ -26,6 +26,7 @@
           <a href="lab3.html">Lab3</a>
           <a href="lab4.html">Lab4</a>
           <a href="lab5.html">Lab5</a>
+          <a href="rep56.html">Lab6</a>
         </div>
 
     <div class="container">
@@ -232,7 +233,7 @@
       </div>
     </div>
 
-   <script src="script.js/lab5.js"></script>
+   <script src="script/lab5.js"></script>
     </script>
   </body>
 </html>
