Fix and update files

--- a/rep56.html
+++ b/rep56.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dynamic Course List</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/rep56.css" />
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/rep56.css" />
   </head>
   <body>
     <div class="container">
@@ -22,9 +22,7 @@
           <a href="lab3.html">Lab3</a>
           <a href="lab4.html">Lab4</a>
           <a href="lab5.html">Lab5</a>
-          <a href="rep56.html">Lab6_6</a>
-          <a href="rep7.html">Lab6_7</a>
-          <a href="rep8.html">Lab6_8</a>
+          <a href="rep56.html">Lab6</a>
           <li class="dropdown">
             <a href="#" id="lab6-toggle">
               <span>Repo</span>
