--- a/lab.html
+++ b/lab.html
@@ -21,9 +21,8 @@
             <a href="lab3.html">Lab3</a>
             <a href="lab4.html">Lab4</a>
             <a href="lab5.html">Lab5</a>
-            <a href="rep56.html">Lab6_6</a>
-          <a href="rep7.html">Lab6_7</a>
-          <a href="rep8.html">Lab6_8</a>
+            <a href="rep56.html">Lab6</a>
+          
           </div>
   
   </body>
