--- a/rep8.html
+++ b/rep8.html
@@ -26,7 +26,7 @@
           <a href="rep56.html">Lab6</a>
           <li class="dropdown">
             <a href="#" id="lab6-toggle">
-              <span>Lab6</span>
+              <span>Repo</span>
               <i class="bi bi-chevron-down toggle-dropdown"></i>
             </a>
             <ul id="lab6-dropdown" style="display: none;">
