Fix and update files

--- a/rep56.html
+++ b/rep56.html
@@ -53,6 +53,6 @@
     <div class="course-container" id="courseContainer">
       <!-- Khóa học sẽ hiển thị ở đây -->
     </div>
-    <script src="../script/rep56.js"></script>
+    <script src="script/rep56.js"></script>
   </body>
 </html>
