--- a/lab1.html
+++ b/lab1.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quản lý khóa học-Lab1</title>
-    <link rel="stylesheet" href="css/styles.css">
-  
+    <title>Math Learning Platform</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/lab1.css" />
   </head>
+
   <body>
-    <div class="container">
-      <div class="menu">
-        <a href="index.html" class="home-link">Home</a>
-        <a href="about.html" class="about-link">About</a>
-        <a href="lab.html" class="labs-link">Tabs</a>
-
+    <header>
+      <div class="logo">
+        <a href="index.html">
+          <h1>AN</h1>
+        </a>
       </div>
-      <div class="content">
-        <h2>Lab</h2>
-        <div class="labs-container">
-          <a href="lab1.html">Lab1</a>
-          <a href="lab2.html">Lab2</a>
-          <a href="lab3.html">Lab3</a>
-          <a href="lab4.html">Lab4</a>
-          <a href="lab5.html">Lab5</a>
-          <a href="rep56.html">Lab6</a>
-      <div class="content">
-        <h2>Quản lý khóa học</h2>
+      <div class="project-button">
+        <nav>
+          <ul>
+            <li><a class="text-primary" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="lab1.html">  </a></li>
+          </ul>
+          <main class="content">
+            <div class="labs-container">
+              <a href="lab1.html">Lab1</a>
+              <a href="lab2.html">Lab2</a>
+              <a href="lab3.html">Lab3</a>
+              <a href="lab4.html">Lab4</a>
+              <a href="lab5.html">Lab5</a>
+              <a href="rep56.html">Lab6</a>
+            </div>
+      
+        </nav>
+      </div>
+    </header>
 
-        <!-- Form tạo/ cập nhật khóa học -->
+  
+      <section class="course-management">
+        <h2>Quản lý khóa học</h2>
         <form action="#" method="POST" class="course-form">
-          <!-- Course ID: Cho phép người dùng nhập -->
           <div class="form-group">
             <label for="course_id">Mã khóa học:</label>
             <input
@@ -40,8 +54,6 @@
               required
             />
           </div>
-
-          <!-- Course Name: Bắt buộc nhập -->
           <div class="form-group">
             <label for="course_name">Tên khóa học:</label>
             <input
@@ -53,8 +65,6 @@
               required
             />
           </div>
-
-          <!-- Course Description: Tùy chọn -->
           <div class="form-group">
             <label for="course_description">Mô tả khóa học:</label>
             <textarea
@@ -64,8 +74,6 @@
               placeholder="Nhập mô tả chi tiết khóa học (tùy chọn)"
             ></textarea>
           </div>
-
-          <!-- Instructor: Chọn từ danh sách người dùng đã tạo -->
           <div class="form-group">
             <label for="created_by">Giảng viên:</label>
             <select id="created_by" name="created_by" required>
@@ -75,8 +83,6 @@
               <option value="3">Trần Thị Thanh Nga</option>
             </select>
           </div>
-
-          <!-- Created At: chỉ hiển thị, không chỉnh sửa -->
           <div class="form-group">
             <label for="created_at">Ngày tạo:</label>
             <input
@@ -87,8 +93,6 @@
               readonly
             />
           </div>
-
-          <!-- Updated At: chỉ hiển thị, không chỉnh sửa -->
           <div class="form-group">
             <label for="updated_at">Cập nhật lần cuối:</label>
             <input
@@ -99,16 +103,46 @@
               readonly
             />
           </div>
-
-          <!-- Các nút hành động -->
           <div class="form-actions">
             <button type="submit">Lưu khóa học</button>
             <button type="button" class="delete-btn">Xóa khóa học</button>
           </div>
         </form>
-      </div>
-    </div>
+      </section>
+    </main>
 
+    <footer>
+      <div class="footer-container">
+        <div class="footer-group-info">
+          <h3>Web cá nhân</h3>
+          <p>Nong Lam University - Ho Chi Minh City</p>
+          <p>Phone: 0349647423<br />Email: 23130004@st.hcmuaf.edu.vn</p>
+        </div>
+        <div class="footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="lab1.html">Lab</a></li>
+          </ul>
+        </div>
+        <div class="footer-members">
+          <h4>Our Members</h4>
+          <ul>
+            <li>
+              <a href="https://tranlephucan.github.io/web/">Trần Lê Phúc An</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-newsletter">
+          <h4>Newsletter</h4>
+          <form>
+            <input type="email" placeholder="Email is here" required />
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+      </div>
+    </footer>
     <script src="script/lab1.js"></script>
   </body>
 </html>
