--- a/themlab2.html
+++ b/themlab2.html
@@ -3,16 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tasks</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Math Learning Platform</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+   
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/lab2.css">
   </head>
+
   <body>
-    <div class="container">
-      <div class="menu">
-        <a href="index.html" class="home-link">Home</a>
-        <a href="about.html" class="about-link">About</a>
-        <a href="lab.html" class="labs-link">Tabs</a>
+    <header>
+      <div class="logo">
+        <a href="index.html">
+          <h1>AN</h1>
+        </a>
       </div>
+
+      <div class="project-button">
+        <nav>
+          <ul>
+            <li><a class="text-primary" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="lab1.html">   </a></li>
+          </ul>
+          <main class="content">
+            <div class="labs-container">
+              <a href="lab1.html">Lab1</a>
+              <a href="lab2.html">Lab2</a>
+              <a href="lab3.html">Lab3</a>
+              <a href="lab4.html">Lab4</a>
+              <a href="lab5.html">Lab5</a>
+              <a href="rep56.html">Lab6</a>
+            </div>
+      
+        </nav>
+      </div>
+    </header>
       <section id="dashboardScreen">
         <h1>Các bài tập có sẵn</h1>
         <div class="filter-section">
@@ -219,5 +247,45 @@
           });
         }
     </script>
-  </body>
+  <footer>
+    <div class="footer-container">
+      <div class="footer-group-info">
+        <h3>Web cá nhân</h3>
+        <p>
+          Nong Lam University - Ho Chi Minh City
+        </p>
+        <p>Phone: 0349647423<br />Email: 23130004@st.hcmuaf.edu.vn</p>
+      </div>
+
+      <div class="footer-links">
+        <h4>Useful Links</h4>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About </a></li>
+          <li><a href="lab.html">Lab</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-members">
+        <h4>Our Members</h4>
+        <ul>
+          <li>
+            <a href="https://tranlephucan.github.io/web/">Trần Lê Phúc An</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer-newsletter">
+        <h4>Newsletter</h4>
+        <form>
+          <input type="email" placeholder="Email is here" required />
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
+
+</body>
 </html>
