--- a/index.html
+++ b/index.html
@@ -3,20 +3,85 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Math Learning Platform</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
+
   <body>
-    <div id="tab" class="content active home-content">
-      <div class="menu">
-        <a href="index.html" class="home-link">Home </a>
-        <a href="about.html" class="about-link">About</a>
-        <a href="lab.html" class="labs-link">Lab</a>
+    <header>
+      <div class="logo">
+        <a href="index.html">
+          <h1>AN</h1>
+        </a>
       </div>
-      <div class="home-content">
-        <h2>Welcome to Home</h2>
-        <p></p>
+
+      <div class="project-button">
+        <nav>
+          <ul>
+            <li><a class="text-primary" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="lab1.html">   </a></li>
+          </ul>
+          <main class="content">
+            <div class="labs-container">
+              <a href="lab1.html">Lab1</a>
+              <a href="lab2.html">Lab2</a>
+              <a href="lab3.html">Lab3</a>
+              <a href="lab4.html">Lab4</a>
+              <a href="lab5.html">Lab5</a>
+              <a href="rep56.html">Lab6</a>
+            </div>
+      
+        </nav>
       </div>
+    </header>
+    <div class="slide">
+      <img
+        src="image/pngtree-chinese-style-landscape-background-picture-image_938865.jpg"
+        alt="Image 1"
+      />
     </div>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-group-info">
+          <h3>Web cá nhân</h3>
+          <p>
+            Hồ Chí Minh Nông Lâm University<br />Thủ Đức City, Hồ Chí Minh City,
+            Việt Nam
+          </p>
+          <p>Phone: 0349647423<br />Email: 23130004@st.hcmuaf.edu.vn</p>
+        </div>
+
+        <div class="footer-links">
+          <h4>Useful Links</h4>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About </a></li>
+            <li><a href="lab1.html">Lab</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-members">
+          <h4>Our Members</h4>
+          <ul>
+            <li>
+              <a href="https://tranlephucan.github.io/web/">Trần Lê Phúc An</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-newsletter">
+          <h4>Newsletter</h4>
+          <form>
+            <input type="email" placeholder="Email is here" required />
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
